# termchat-client

./: CLAUDE.md  Cargo.toml  Makefile  README.md  install.sh
.github/workflows/: release.yml
src/: app.rs  config.rs  main.rs
src/api/: mod.rs  rest.rs  ws.rs
src/events/: handler.rs  mod.rs
src/models/: channel.rs  message.rs  mod.rs  user.rs
src/state/: app_state.rs
src/tests/: app_state_test.rs  mod.rs  models_test.rs
src/ui/: chat.rs  input.rs  layout.rs  login.rs  mod.rs  modal.rs  sidebar.rs
