[package]
name = "termchat-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "termchat"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tungstenite = "0.24"

[dev-dependencies]
ratatui = { version = "0.29", features = ["unstable-widget-ref"] }
